--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@
 #que usamos HSQLDB, podes probar comentarlas y ver que pasa :)). 
 #En el caso de otro motor de base de datos (como MySQL), esta configuracion es necesaria.
 
-spring.datasource.url=jdbc:hsqldb:mem:dosideas
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.hsqldb.jdbcDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+#spring.datasource.url=jdbc:hsqldb:mem:dosideas
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driverClassName=org.hsqldb.jdbcDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 ##############################################################################################################
 
